remove live and va pages
